--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,17 +14,24 @@ body
   border-radius: 15px
   &-form
     margin-bottom: 15px
+    width: 60%
+    position: relative
+    margin: 0 auto
     &__input
       font-size: 18px
       padding: 10px
       border: none
       border-bottom: 1px solid black
       background-color: transparent
-      width: 60%
-      margin-right: 20px
+      width: 100%
     &__btn
+      position: absolute
+      right: 0
+      top: 0
       padding: 10px
       border: none
+      background-color: transparent
+      cursor: pointer
   &-card
     display: flex
     justify-content: space-around
