--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,8 @@ body
   font-family: 'Roboto', sans-serif
 *
   box-sizing: border-box
+p
+  margin: 0
 .main
   display: flex
   align-items: center
@@ -18,6 +20,7 @@ body
     width: 60%
     position: relative
     margin: 0 auto
+    margin-bottom: 30px
     &__input
       font-size: 18px
       padding: 10px
@@ -36,10 +39,12 @@ body
   &-card
     display: flex
     justify-content: space-around
-    align-items: center
+    align-items: top
+    margin-bottom: 20px
     &__name
       font-size: 18px
       font-weight: 700
+      margin-bottom: 5px
     &__class
       text-transform: uppercase
       font-weight: 400
@@ -48,6 +53,12 @@ body
       margin-right: 10px
     &__points
       font-weight: 700
+      &-descr
+        margin-bottom: 22px
+  &-descr
+    text-align: left
+    font-size: 12px
+    font-weight: 700
 
 
   
