--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,6 +5,12 @@ body
   box-sizing: border-box
 p
   margin: 0
+@mixin color($color)
+  border-color: $color
+  background-color: rgba($color, 0.2)
+  color: black
+  a
+    color: darken($color, 10%)
 .main
   display: flex
   align-items: center
@@ -46,7 +52,6 @@ p
       font-weight: 700
       margin-bottom: 5px
     &__class
-      text-transform: uppercase
       font-weight: 400
     &__img
       vertical-align: middle
@@ -59,6 +64,42 @@ p
     text-align: left
     font-size: 12px
     font-weight: 700
+  &-advice
+    width: 60%
+    margin: 0 auto
+    display: none
+    border: 1px solid black
+    border-radius: 15px
+    padding: 10px
+    background-color: rgba(#000000, 0.2)
+    margin-bottom: 15px
+    a
+      text-decoration: none
+      font-weight: 700
+      color: black
+.green
+  @include color(green)
+.orange
+  @include color(orange)
+.yellow
+  @include color(yellow)
+.red
+  @include color(red)
 
+
+
+@media ( max-width: 360px )
+  .hunters
+    &-title
+      font-size: 20px
+    &-form
+      width: 80%
+      &__input
+        font-size: 14px
+    &-card
+      &__img
+        width: 25%
+    &-advice
+      width: 100%
 
   
