--- a/sass/style.sass
+++ b/sass/style.sass
@@ -71,6 +71,7 @@ p
     border: 1px solid black
     border-radius: 15px
     padding: 10px
+    font-size: 16px
     background-color: rgba(#000000, 0.2)
     margin-bottom: 15px
     a
