--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,10 +1,12 @@
 body
   margin: 0
   font-family: 'Roboto', sans-serif
+  background: gray url('../img/bg.jpg') center / cover no-repeat
 *
   box-sizing: border-box
-p
+p,h1,h2,h3,h4,h5,h6
   margin: 0
+
 @mixin color($color)
   border-color: $color
   background-color: rgba($color, 0.2)
@@ -12,15 +14,15 @@ p
   a
     color: darken($color, 10%)
 .main
+  padding: 100px 0
   display: flex
   align-items: center
-  text-align: center
-  height: 100vh
-  background: url('../img/bg.jpg') center / cover no-repeat
 .hunters
-  padding: 10px
+  text-align: center
+  padding: 20px 10px 10px
   background-color: rgba(#ffffff, 0.5)
   border-radius: 15px
+  margin-bottom: 40px
   &-form
     margin-bottom: 15px
     width: 60%
@@ -78,6 +80,30 @@ p
       text-decoration: none
       font-weight: 700
       color: black
+.debtors
+  padding: 20px 10px 10px
+  background-color: rgba(#ffffff, 0.5)
+  border-radius: 15px
+  &-title
+    text-align: center
+    margin-bottom: 10px
+  &-list
+    display: flex
+    flex-wrap: wrap
+    padding: 20px 85px
+  &-card
+    border: 1px solid #000000
+    background-color: rgba(#000000, 0.2)
+    border-radius: 5px
+    padding: 10px
+    margin-left: 10px
+    margin-bottom: 10px
+      
+    &__item
+      width: 150px
+      padding-top: 5px
+      padding-bottom: 5px
+      font-weight: 700
 .green
   @include color(green)
 .orange
@@ -87,8 +113,16 @@ p
 .red
   @include color(red)
 
+@media ( max-width: 992px )
+  .debtors
+    &-list
+      justify-content: center
+      padding: 20px 0
 
-
+@media ( max-width: 576px )
+  .debtors
+    &-list
+      padding: 20px 30px
 @media ( max-width: 360px )
   .hunters
     &-title
@@ -102,5 +136,8 @@ p
         width: 25%
     &-advice
       width: 100%
+  .debtors
+    &-list
+      padding: 20px 0
 
   
