--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -40,6 +40,9 @@ p,h1,h2,h3,h4,h5,h6
       border-bottom: 1px solid black
       background-color: transparent
       width: 100%
+      &::focus
+        border: none
+        border-bottom: 1px solid black
     &__btn
       position: absolute
       right: 0
@@ -48,6 +51,8 @@ p,h1,h2,h3,h4,h5,h6
       border: none
       background-color: transparent
       cursor: pointer
+      &::focus
+        border: none
   &-card
     display: flex
     flex-wrap: wrap
@@ -148,12 +153,17 @@ p,h1,h2,h3,h4,h5,h6
         font-size: 14px
     &-card
       &__item
-        &-points
-          margin-bottom: 40px
+        &-title
+          font-size: 14px
     &-advice
       width: 100%
   .debtors
     &-list
       padding: 20px 0
-
+@media ( max-width: 306px )
+  .hunters
+    &-card
+      &__item
+        &-points
+          margin-bottom: 35px
   
