--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -130,6 +130,8 @@ p,h1,h2,h3,h4,h5,h6
 @media ( max-width: 992px )
   .hunters
     width: 100%
+    &-advice
+      width: 80%
   .debtors
     width: 100%
     &-list
