--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -60,7 +60,7 @@ p,h1,h2,h3,h4,h5,h6
     margin-bottom: 20px
     &__info
       flex-basis: 100%
-      display: flex
+      display: none
       justify-content: space-around
       align-items: top
       margin-bottom: 20px
