--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -142,6 +142,17 @@ p,h1,h2,h3,h4,h5,h6
   .hunters
     &-form
       width: 80%
+    &-card
+      &__info
+        flex-direction: column
+        align-items: flex-start
+        padding-left: 50px
+      &__item
+        &-title
+          display: inline-block
+          margin-right: 10px
+        &-descr
+          display: inline-block
   .debtors
     &-list
       padding: 20px 30px
